--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 <html>
-  hello 123
+  <head>
+    <body>
+    <h1> Pranjali Tupat</h1>
+    <h2> Student at Modern college pune</h2>
+    <h3> vishrantwadi ,pune 411015</h3>
+    </body>
+    </head>
 </html>
