--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <html>
-  <head>
-    <body>
+  <head >
+    <body style="background-color:powderblue">
     <h1> Pranjali Tupat</h1>
-    <h2> Student at Modern college pune</h2>
-    <h3> vishrantwadi ,pune 411015</h3>
+    <h3> Student at Modern college pune</h3>
+    <h4> vishrantwadi ,pune ,pincode- 411015</h4>
+   <p>-----------------------------------------------------------------------------------------------------------</p> 
+    <h3>Skills</h3>
+    <ul>
+      <li>C</li>
+      <li>C++</li>
+      <li>Java</li>
+      <li>Python</li>
+      <li>Javascript</li>
+      <li>PHP</li>
+      <li>SQL</li> 
+       </ul>
     </body>
     </head>
 </html>
