--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <h3> Student at Modern college pune</h3>
     <h4> vishrantwadi ,pune ,pincode- 411015</h4>
    <p>-----------------------------------------------------------------------------------------------------------</p> 
-    <h3>Skills</h3>
+    <h3 style ="color: pink"Skills</h3>
     <ul>
       <li>C</li>
       <li>C++</li>
