--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
   <head >
     <body style="background-color:powderblue">
+      <img src="text-collage-tag-cloud-freelance-work-time-day-wallpaper-2560x1080_14.jpg" alt="profile photo">
     <h1> Pranjali Tupat</h1>
     <h3> Student at Modern college pune</h3>
     <h4> vishrantwadi ,pune ,pincode- 411015</h4>
    <p>-----------------------------------------------------------------------------------------------------------</p> 
-    <h3 style ="color: pink">Skills</h3>
+    <h3 style ="color:blueviolet">Skills</h3>
     <ul>
       <li>C</li>
       <li>C++</li>
