--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
   <head >
+    <style>
+      img{
+        width:100px;
+      }
+    </style>
     <body style="background-color:powderblue">
       <img src="text-collage-tag-cloud-freelance-work-time-day-wallpaper-2560x1080_14.jpg" alt="profile photo">
     <h1> Pranjali Tupat</h1>
