--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       }
     </style>
     <div>
-    <body style="background-color:powderblue">
+    <body>
       <link rel="stylesheet" href="style.css">
       <img src="text-collage-tag-cloud-freelance-work-time-day-wallpaper-2560x1080_14.jpg" alt="profile photo">
     <h1> Pranjali Tupat</h1>
